Bug 335024 - "Window is not reacting" dialog incorrectly triggered when window spawns a close confirmation dialog
Summary: "Window is not reacting" dialog incorrectly triggered when window spawns a cl...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwindowsystem
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 4.98.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Flöser
URL: https://git.reviewboard.kde.org/r/118...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-19 06:40 UTC by Eike Hein
Modified: 2014-05-20 05:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-05-19 06:40:27 UTC
Some apps ask the user for confirmation when trying to close their main windows. For example, the KF5 version of Dolphin when trying to close a window with multiple tabs. KWin then considers the window as inresponsive and pops up the Terminate vs. Wait Longer dialog. I don't think that's desirable, nor do I remember running into this behavior in Plasma 1.

Reproducible: Always
Comment 1 Martin Flöser 2014-05-19 07:20:04 UTC
that would be a bug in Qt. KWin shows the dialog if the window is not replying to a ping. If that only happens with Qt 5 variants of applications, then it's a Qt regression.
Comment 2 Eike Hein 2014-05-19 07:24:08 UTC
It also happens with KDE 4's Dolphin.
Comment 3 Martin Flöser 2014-05-19 07:49:37 UTC
Porting bug in netwm.
Comment 4 Martin Flöser 2014-05-20 05:27:29 UTC
Git commit eb4f296767e5b3f17a4b9f8db33acc66581e3fe3 by Martin Gräßlin.
Committed on 19/05/2014 at 07:46.
Pushed by graesslin into branch 'master'.

Fix regression in NETRootInfo::sendPing

Client message for _NET_WM_PING has a message_type of WM_PROTOCOLS.
REVIEW: 118197

M  +1    -1    src/netwm.cpp

http://commits.kde.org/kwindowsystem/eb4f296767e5b3f17a4b9f8db33acc66581e3fe3