Fix regression in NETRootInfo::sendPing

Client message for _NET_WM_PING has a message_type of WM_PROTOCOLS.

BUG: 335024
REVIEW: 118197